Fix section vertical spacing (#976)
* Fix rich text margins for bg-1

* Remove section level spacing CSS

* Update and clean up spacing naming conventions

* Clean up

* Fix spacing for special consecutive sections with no heading

* Remove comment

* Update collapse grid naming

* Update behaviour of special collapsing sections

* Fix bugs

* Remove product-grip bottom margin

* Adjust setting range. Set image-with-text as collapsible section

* Update from Shopify for theme dawn/fix-section-vertical-spacing

Committed from shop: OS 2.0

* Revert "Update from Shopify for theme dawn/fix-section-vertical-spacing"

This reverts commit a0771e57ae4c697a101d6fc45092e0b112f64ccd.

* Adapt consistent spacing for all sections. Remove special cases

* Revert usage of section spacing for elements other than sections

* Edit settings names and order for spacing. Add mobile vertical section spacing setting

* Revert value for margin-bottom

* Revert additional padding

* Revert additional padding

* Revert heading logic

* Revert heading logic

* Revert heading logic

* Address feedback

* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json

--- a/assets/collage.css
+++ b/assets/collage.css
@@ -1,23 +1,3 @@
-.collage-section + .collage-section .no-heading {
-  margin-top: -4rem;
-}
-
-@media screen and (max-width: 749px) {
-  .collage-wrapper-title {
-    margin-top: -1rem;
-  }
-}
-
-@media screen and (min-width: 750px) {
-  .collage-wrapper.no-heading {
-    margin-top: calc(6rem + var(--page-width-margin));
-  }
-
-  .collage-section + .collage-section .no-heading {
-    margin-top: var(--sections-spacing);
-  }
-}
-
 .collage-wrapper-title {
   margin-bottom: 3rem;
 }
