--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -1,8 +1,3 @@
-.image-with-text {
-  margin-top: var(--sections-spacing);
-  margin-bottom: var(--sections-spacing);
-}
-
 .image-with-text .grid {
   margin-left: 0;
   margin-bottom: 0;
