--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -16,12 +16,6 @@
   padding-bottom: 0;
 }
 
-@media screen and (max-width: 749px) {
-  .product-section {
-    margin-top: 0;
-  }
-}
-
 @media screen and (min-width: 750px) {
   .product--thumbnail .product__media-gallery,
   .product--thumbnail_slider .product__media-gallery,
